@@ -1,0 +1,37 @@
+<printer id="printer/Epson-PX_403A">
+  <make>Epson</make>
+  <model>PX-403A</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.com/</url>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX;MDL:PX-403A;CLS:PRINTER;DES:EPSON PX-403A</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX</commandset>
+      <description>EPSON PX-403A</description>
+      <manufacturer>EPSON</manufacturer>
+      <model>PX-403A</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>epson-201103j</driver>
+  <drivers>
+    <driver>
+      <id>epson-201103j</id>
+    </driver>
+ </drivers>
+  <comments>
+    <en>
+      Epson color inkjet printer.&lt;p&gt;
+      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
+    </en>
+  </comments>
+</printer>
