@@ -1,0 +1,40 @@
+<printer id="printer/Epson-PX_5V">
+  <make>Epson</make>
+  <model>PX-5V</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.com/</url>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:PX-5V;CLS:PRINTER;DES:EPSON PX-5V</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
+      <description>EPSON PX-5V</description>
+      <manufacturer>EPSON</manufacturer>
+      <model>PX-5V</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>epson-px-5v</driver>
+  <drivers>
+    <driver>
+      <id>epson-px-5v</id>
+    </driver>
+    <driver>
+      <id>epson-escpr</id>
+    </driver>
+ </drivers>
+  <comments>
+    <en>
+      All-in-One color inkjet printer.&lt;p&gt;
+      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
+    </en>
+  </comments>
+</printer>
