@@ -1,0 +1,37 @@
+<printer id="printer/Epson-PX_K100">
+  <make>Epson</make>
+  <model>PX-K100</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.com/</url>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX;MDL:PX-K100;CLS:PRINTER;DES:EPSON PX-K100</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX</commandset>
+      <description>EPSON PX-K100</description>
+      <manufacturer>EPSON</manufacturer>
+      <model>PX-K100</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>epson-px-k100</driver>
+  <drivers>
+    <driver>
+      <id>epson-px-k100</id>
+    </driver>
+ </drivers>
+  <comments>
+    <en>
+      All-in-One color inkjet printer.&lt;p&gt;
+      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
+    </en>
+  </comments>
+</printer>
