@@ -1,0 +1,40 @@
+<printer id="printer/Epson-Stylus_Photo_R3000">
+  <make>Epson</make>
+  <model>Stylus Photo R3000</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.com/</url>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:Epson Stylus Photo R3000;CLS:PRINTER;DES:EPSON Epson Stylus Photo R3000</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
+      <description>EPSON Epson Stylus Photo R3000</description>
+      <manufacturer>EPSON</manufacturer>
+      <model>Epson Stylus Photo R3000</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>epson-stylus-photo-r3000</driver>
+  <drivers>
+    <driver>
+      <id>epson-stylus-photo-r3000</id>
+    </driver>
+    <driver>
+      <id>epson-escpr</id>
+    </driver>
+ </drivers>
+  <comments>
+    <en>
+      Epson color inkjet printer.&lt;p&gt;
+      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
+    </en>
+  </comments>
+</printer>
