@@ -1,4 +1,13 @@
 2011-03-30  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
+	* db/source/printer/Epson-K100_Series.xml,
+         db/source/printer/Epson-K200_Series.xml,
+         db/source/printer/Epson-PX_5V.xml,
+         db/source/printer/Epson-PX_403A.xml,
+         db/source/printer/Epson-PX_K100.xml,
+         db/source/printer/Epson-Stylus_Photo_R3000.xml:
+         Added printer XML files for free driver.
+
+2011-03-30  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
 	* db/source/printer/Epson-WorkForce_840.xml,
          db/source/printer/Epson-Stylus_Office_BX925FW.xml,
          db/source/printer/Epson-ME_900WD_Series.xml,
